# marches-and-gnats-solutions

./: README.md  logic_mill.py  main.py  pyproject.toml  template.py
solutions/: 1.txt  10.py  10.template  10.txt  11.txt  12.py  12.template  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.py  7.template  7.txt  8.py  8.template  8.txt  9.txt
tests/: conftest.py  test_solutions.py
