[project]
name = "marches-and-gnats-solutions"
version = "1.0.0"
description = "Solutions to https://mng.quest/"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.12.3",
]

[tool.pytest.ini_options]
pythonpath = "."
